<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.updateUserFragment">

    <TextView
        android:id="@+id/tv_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_funcionario_title"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_codigo_update_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_code_label"
        app:layout_constraintTop_toBottomOf="@id/tv_update_title"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_codigo_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_list_code_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_update_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_codigo_update_label"/>

    <EditText
        android:id="@+id/et_update_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_nome_hint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="@id/tv_codigo_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_update_complemento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/et_complemento_hint"
        app:layout_constraintTop_toBottomOf="@id/et_update_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_update_reservado1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_reservado1_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_complemento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_update_reservado2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_reservado2_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_update_reservado1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_update"
        app:tint="@color/white"
        android:contentDescription="@string/fab_update_user_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/fab_update_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/white"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/fab_update_user_description" />


</androidx.constraintlayout.widget.ConstraintLayout>