<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tv_new_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_funcionario_title"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_nome_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_new_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_complemento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/et_complemento_hint"
        app:layout_constraintTop_toBottomOf="@id/et_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_reservado1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_reservado1_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_complemento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_reservado2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_reservado2_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_reservado1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="8dp"
        android:inputType="text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_save"
        app:tint="@color/white"
        android:contentDescription="@string/fab_save_new_user_description" />


</androidx.constraintlayout.widget.ConstraintLayout>