<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UserListFragment">


    <TextView
        android:id="@+id/tv_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_de_funcionarios_title"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_label_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_prompt"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@id/spinner_order"
        app:layout_constraintEnd_toStartOf="@id/spinner_order"
        app:layout_constraintStart_toStartOf="@id/tv_list_title"

        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinner_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_list_title"
        app:layout_constraintStart_toEndOf="@id/tv_label_spinner"
        app:layout_constraintEnd_toEndOf="@id/tv_list_title"
        android:padding="8dp"
        android:entries="@array/spinner_order"
        android:prompt="@string/spinner_prompt"

        />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/user_list_item"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/spinner_order"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"

        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/fab_create_user_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_import_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down"
        app:tint="@color/white"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toStartOf="@id/fab_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/fab_create_user_description" />

</androidx.constraintlayout.widget.ConstraintLayout>